--- a/Pear/Controllers/Onboarding/Onboarding Explaination Pages/Page 1/OnboardingExplainationPage1ViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Onboarding Explaination Pages/Page 1/OnboardingExplainationPage1ViewController.storyboard
@@ -40,7 +40,7 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="onboarding-meme-1" translatesAutoresizingMaskIntoConstraints="NO" id="L3Q-s1-RX1">
                                 <rect key="frame" x="20" y="138.66666666666669" width="335" height="543.33333333333326"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="On Pear, every profile is  written by friends" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="he2-Fq-k2b">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="On Pear, every profile is  written by friends." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="he2-Fq-k2b">
                                 <rect key="frame" x="30" y="64" width="315" height="54.666666666666657"/>
                                 <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="20"/>
                                 <nil key="textColor"/>
